infofetch funker, men kommer ikke på nettsiden enda