@@ -3,24 +3,29 @@ package org.example;
 import org.json.JSONObject;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.core.io.ClassPathResource;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RestController;
 
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.nio.charset.StandardCharsets;
+import org.apache.commons.io.IOUtils;
+@RestController
 public class AircraftInfoController {
 
     private static final Logger logger = LoggerFactory.getLogger(AircraftInfoController.class);
     @GetMapping("/aircraft/{model}")
     public ResponseEntity<?> getAircraftInfo(@PathVariable String model) {
         try {
-            Path filePath = Paths.get("aircraft-info-service/src/main/java/org/example/aircraftData.json");
-            logger.info("Reading aircraft data from {}", filePath);
+            ClassPathResource resource = new ClassPathResource("aircraftData.json");
 
-            String content = Files.readString(filePath);
+
+            InputStream inputStream = resource.getInputStream();
+            String content = IOUtils.toString(inputStream, StandardCharsets.UTF_8);
             logger.info("Read content: {}", content);
 
             JSONObject aircraftData = new JSONObject(content);
